<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_bar_height"
        android:background="@color/title_bgcolor" >

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:onClick="back"
            android:padding="@dimen/padding10"
            android:src="@drawable/img_left_white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/user_loin_title"
            android:textColor="@color/title_textcolor"
            android:textSize="@dimen/title_textsize"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/option"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:clickable="true"
            android:gravity="center_vertical"
            android:onClick="regist"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/regist"
            android:textColor="@color/title_textcolor"
            android:textSize="14sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="@dimen/padding10"
        android:layout_marginRight="@dimen/padding10"
        android:layout_marginTop="30dp"
        android:background="@drawable/bg_bottom_divider"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/padding10"
        android:paddingRight="@dimen/padding10" >

        <ImageView
            android:layout_width="14dp"
            android:layout_height="match_parent"
            android:src="@drawable/user_login_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/name_label"
            android:textColor="@color/new_red"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="请输入手机号"
            android:inputType="phone"
            android:maxLength="11"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="@dimen/padding10"
        android:layout_marginRight="@dimen/padding10"
        android:background="@drawable/bg_bottom_divider"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/padding10"
        android:paddingRight="@dimen/padding10" >

        <ImageView
            android:layout_width="14dp"
            android:layout_height="match_parent"
            android:src="@drawable/user_login_pwd" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/pwd_label"
            android:textColor="@color/new_red"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="请输入登录密码"
            android:password="true"
            android:singleLine="true"
            android:textSize="14sp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/padding10" >

        <TextView
            android:id="@+id/forgetpwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:clickable="true"
            android:onClick="forgetpwd"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="忘记密码？"
            android:textColor="@color/new_red"
            android:textSize="12sp"
            android:textStyle="italic" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/forgetpwd"
            android:layout_marginTop="40dp"
            android:background="@drawable/red_rect_round_shape"
            android:onClick="submit"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />
    </RelativeLayout>

</LinearLayout>