<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_bar_height"
        android:background="@color/title_bgcolor" >

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:onClick="back"
            android:padding="@dimen/padding10"
            android:src="@drawable/img_left_white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/forgetpwd"
            android:textColor="@color/title_textcolor"
            android:textSize="@dimen/title_textsize"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="@dimen/padding10"
        android:layout_marginRight="@dimen/padding10"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_bottom_divider"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/padding10"
        android:paddingRight="@dimen/padding10" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:text="@string/phoneno_label"
            android:textColor="@color/new_red"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@null"
            android:hint="请输入手机号"
            android:maxLength="11"
            android:numeric="integer"
            android:singleLine="true"
            android:textSize="16sp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="@dimen/padding10"
        android:layout_marginRight="@dimen/padding10"
        android:background="@drawable/bg_bottom_divider"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/padding10"
        android:paddingRight="@dimen/padding10" >

        <EditText
            android:id="@+id/verification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/getverification"
            android:background="@null"
            android:gravity="center_horizontal"
            android:hint="请输入您的短信验证码"
            android:numeric="integer"
            android:paddingLeft="8dp"
            android:textSize="15sp" />

        <Button
            android:id="@+id/getverification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/red_rect_round_shape"
            android:onClick="getverification"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/getverification"
            android:textColor="@android:color/white"
            android:textSize="13sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="@dimen/padding10"
        android:layout_marginRight="@dimen/padding10"
        android:background="@drawable/bg_bottom_divider"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/padding10"
        android:paddingRight="@dimen/padding10" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:text="@string/alter_pwd_label"
            android:textColor="@color/new_red"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/pwd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@null"
            android:hint="请输入修改密码"
            android:password="true"
            android:singleLine="true"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="@dimen/padding10"
        android:layout_marginRight="@dimen/padding10"
        android:background="@drawable/bg_bottom_divider"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/padding10"
        android:paddingRight="@dimen/padding10" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:text="@string/confirm_pwd_label"
            android:textColor="@color/new_red"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/pwd1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@null"
            android:hint="请输入确认密码"
            android:password="true"
            android:singleLine="true"
            android:textSize="16sp" />
    </LinearLayout>

    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/red_rect_round_shape"
        android:onClick="submit"
        android:text="@string/confirm_alter"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold" />

</LinearLayout>