<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white" >

    <LinearLayout
        android:id="@+id/tabbar"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@color/tab_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/ll_tab1"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/iv_tab1"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginTop="5dp"
                android:clickable="false" />

            <TextView
                android:id="@+id/tv_tab1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/text_tab1"
                android:textColor="@color/tabunSelect" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_tab2"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/iv_tab2"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginTop="5dp"
                android:clickable="false" />

            <TextView
                android:id="@+id/tv_tab2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/text_tab2"
                android:textColor="@color/tabunSelect" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_tab3"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/iv_tab3"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginTop="5dp"
                android:clickable="false" />

            <TextView
                android:id="@+id/tv_tab3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/text_tab3"
                android:textColor="@color/tabunSelect" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_tab4"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/iv_tab4"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginTop="5dp"
                android:clickable="false" />

            <TextView
                android:id="@+id/tv_tab4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/text_tab4"
                android:textColor="@color/tabunSelect" />
        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/pager_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/tabbar" >
    </FrameLayout>

</RelativeLayout>