<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_bar_height"
        android:background="@color/new_red" >

        <ImageView
            android:id="@+id/iv_new_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:padding="10dp"
            android:src="@drawable/img_left_white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:text="@string/house_news"
            android:textColor="@android:color/white"
            android:textSize="@dimen/new_big_text"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/iv_new_right"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:src="@drawable/new_title_right" />
    </RelativeLayout>

    <com.handmark.pulltorefresh.library.PullToRefreshScrollView
        android:id="@+id/new_details_scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <WebView
                android:id="@+id/wv_new"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:scrollbars="none" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#B3B3B3" />

            <com.ybd.app.views.MyListView
                android:id="@+id/new_details_myListView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:cacheColorHint="@android:color/transparent"
                android:scrollbars="none" />
        </LinearLayout>
    </com.handmark.pulltorefresh.library.PullToRefreshScrollView>

    <!--
         <com.yibingding.haolaiwu.view.RoundAngleImageView
        android:id="@+id/news_details_image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/default_pic"
        app1:roundHeight="20dp"
        app1:roundWidth="20dp" />
    -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_bar_height"
        android:background="#E6E6E6"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/et_news_send_content"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_weight="4"
            android:background="@drawable/white_rect_round_shape"
            android:gravity="center_vertical"
            android:hint="@string/news_details_comment"
            android:padding="5dp"
            android:textSize="@dimen/new_middle_text" />

        <TextView
            android:id="@+id/tv_news_send"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/news_details_send"
            android:textSize="@dimen/new_big_text" />
    </LinearLayout>

</LinearLayout>